--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -35,86 +35,14 @@
                             <span class="order_time">{{ item.orderStatus | titlecase }}</span>
                         </div>
                         <div class="orderBox_body">
-                            Orderd type: {{ item.order_type.typeName }}
+                            {{ item.created_at | datex:'DD-MM-YYYY hh:mm a' }}
                         </div>
                         <div class="orderBox_footer">
-                            <p class="price_tag">&#8377; {{ item.orderAmount }}</p>
+                            <p class="price_tag">{{ item.orderAmount |currency }}</p>
                             <a href="javascript:;" [routerLink]="['/admin/order/update/'+item.id]" class="btn viewBtn">View Order</a>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-md-8 col-sm-6">
-                    <div class="order_listInner">
-                        <ul class="list-unstyled mb-0 table_order">
-                            <li>
-                                <div class="orderBox">
-                                    <div class="orderBox_header">
-                                        <h4 class="order_number">0001</h4>
-                                        <span class="order_time">00:00:01</span>
-                                    </div>
-                                    <div class="orderBox_body">
-                                        T2, T3, T4
-                                    </div>
-                                    <div class="orderBox_footer">
-                                        <p class="price_tag">&#8377; 2500</p>
-                                        <a href="javascript:;" class="btn viewBtn">View Order</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="orderBox">
-                                    <div class="orderBox_header">
-                                        <h4 class="order_number">0001</h4>
-                                        <span class="order_time">00:00:01</span>
-                                    </div>
-                                    <div class="orderBox_body">
-                                        T2, T3, T4
-                                    </div>
-                                    <div class="orderBox_footer">
-                                        <p class="price_tag">&#8377; 2500</p>
-                                        <a href="javascript:;" class="btn viewBtn">View Order</a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-8 col-sm-6">
-                    <div class="order_listInner">
-                        <ul class="list-unstyled mb-0 parcel_order">
-                            <li>
-                                <div class="orderBox">
-                                    <div class="orderBox_header">
-                                        <h4 class="order_number">0001</h4>
-                                        <span class="order_time">00:00:01</span>
-                                    </div>
-                                    <div class="orderBox_body">
-                                        Orderd on Zomato
-                                    </div>
-                                    <div class="orderBox_footer">
-                                        <p class="price_tag">&#8377; 2500</p>
-                                        <a href="javascript:;" class="btn viewBtn">View Order</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="orderBox">
-                                    <div class="orderBox_header">
-                                        <h4 class="order_number">0001</h4>
-                                        <span class="order_time">00:00:01</span>
-                                    </div>
-                                    <div class="orderBox_body">
-                                        Suggi Order
-                                    </div>
-                                    <div class="orderBox_footer">
-                                        <p class="price_tag">&#8377; 2500</p>
-                                        <a href="javascript:;" class="btn viewBtn">View Order</a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div> -->
             </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -127,10 +55,10 @@
                             <span class="order_time">{{ item.orderStatus | titlecase }}</span>
                         </div>
                         <div class="orderBox_body">
-                            Orderd type: {{ item.order_type.typeName }}
+                            {{ item.created_at | datex:'DD-MM-YYYY hh:mm a' }}
                         </div>
                         <div class="orderBox_footer">
-                            <p class="price_tag">&#8377; {{ item.orderAmount }}</p>
+                            <p class="price_tag">{{ item.orderAmount | currency }}</p>
                             <a href="javascript:;" [routerLink]="['/admin/order/update/'+item.id]" class="btn viewBtn">View Order</a>
                         </div>
                     </div>
