--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -32,6 +32,29 @@
             </a>
         </li>
         <li routerLinkActive="subOpen" class="have_submenu">
+            <a href="javascript:;" routerLink="/admin/settings" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
+                <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Setting </span>
+                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
+            </a>
+            <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
+                        Branches
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
+                        Categories
+                    </a>
+                </li>
+                <li routerLinkActive="active">
+                    <a href="javascript:;" routerLink="/admin/settings/table-manager" matRipple>
+                        Table Manager
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li routerLinkActive="subOpen" class="have_submenu">
             <a href="javascript:;"  routerLink="/admin/account" (click)="openAccountMenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Account </span>
                 <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
@@ -55,29 +78,6 @@
                 <li routerLinkActive="active">
                     <a href="javascript:;" routerLink="/admin/account/master" matRipple>
                         Masters
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li routerLinkActive="subOpen" class="have_submenu">
-            <a href="javascript:;" routerLink="/admin/settings" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
-                <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Setting </span>
-                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
-            </a>
-            <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
-                <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
-                        Categories
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
-                        Branches
-                    </a>
-                </li>
-                <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>
-                        Order Types
                     </a>
                 </li>
             </ul>
