--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -26,14 +26,6 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                     <mat-form-field appearance="outline" class="w-100 pb-0">
-                        <mat-label>Order Type</mat-label>
-                        <mat-select formControlName="typeOfOrder" multiple>
-                            <mat-option *ngFor="let item of orderTypeList" [value]="item.id">{{ item.typeName }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-12">
-                    <mat-form-field appearance="outline" class="w-100 pb-0">
                         <mat-label>Date range</mat-label>
                         <mat-date-range-input [rangePicker]="picker">
                             <input matStartDate placeholder="Start date" formControlName="startDate">
@@ -69,24 +61,19 @@
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="orderType">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Order Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.order_type.typeName}} </td>
-        </ng-container>
-
         <ng-container matColumnDef="orderAmount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Order Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderAmount}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.orderAmount| currency:'':''}} </td>
         </ng-container>
 
         <ng-container matColumnDef="orderStatus">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Order Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderStatus}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.orderStatus|titlecase}} </td>
         </ng-container>
 
         <ng-container matColumnDef="created_at">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Ordered At </th>
-            <td mat-cell *matCellDef="let element"> {{element.created_at | datex:'DD-MM-YYYY'}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-180"> Ordered At </th>
+            <td mat-cell *matCellDef="let element"> {{element.created_at | datex:'DD-MM-YYYY hh:mm a'}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
