--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -59,12 +59,8 @@
             </div>
         </div>
 
-        <div class="d-flex align-items-center my-20">
-            <p class="my-0 mr-20">Enable Order type based pricing</p>
-            <mat-slide-toggle formControlName="isOrderTypePricing"></mat-slide-toggle>
-        </div>
 
-        <div class="row" *ngIf="!form.get('isOrderTypePricing').value">
+        <div class="row">
             <div class="col-12 col-md-3">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Price</mat-label>
@@ -76,52 +72,6 @@
                     <mat-label>Packaging Charges</mat-label>
                     <input matInput formControlName="packagingCharges" type="text">
                 </mat-form-field>
-            </div>
-        </div>
-
-        <div class="tabels_tableWrapper mb-40" *ngIf="form.get('isOrderTypePricing').value">
-            <div class="d-flex mb-10 tabel_header justify-content-between align-items-center">
-                <h3 class="mb-0 font-weight-500">Order type based pricing</h3>
-            </div>
-            <div class="table_outerWrapper">
-                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100" formArrayName="orderBasedPrice">
-            
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="ordertype">
-                        <th mat-header-cell *matHeaderCellDef class="ew-200">Order Type</th>
-                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i"> {{element.get('orderTypeName').value}} </td>
-                    </ng-container>
-            
-                    <ng-container matColumnDef="price">
-                        <th mat-header-cell *matHeaderCellDef>Price</th>
-                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
-                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
-                                <input matInput formControlName="price" type="text">
-                            </mat-form-field>
-                        </td>
-                    </ng-container>
-            
-                    <!-- <ng-container matColumnDef="taxPercent">
-                        <th mat-header-cell *matHeaderCellDef>Tax</th>
-                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
-                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
-                                <input matInput formControlName="taxPercent" type="text">
-                            </mat-form-field>
-                        </td>
-                    </ng-container> -->
-            
-                    <ng-container matColumnDef="packagingCharges">
-                        <th mat-header-cell *matHeaderCellDef>Packaging Charges</th>
-                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
-                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
-                                <input matInput formControlName="packagingCharges" type="text">
-                            </mat-form-field>
-                        </td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
             </div>
         </div>
 
