--- a/src/app/admin/report-manager/report-manager.component.html
+++ b/src/app/admin/report-manager/report-manager.component.html
@@ -34,14 +34,6 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-6 col-12">
-                    <mat-form-field appearance="outline" class="w-100 pb-0">
-                        <mat-label>Order Type</mat-label>
-                        <mat-select formControlName="typeOfOrder" multiple>
-                            <mat-option *ngFor="let item of orderTypeList" [value]="item.id">{{ item.typeName }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
                 <div class="col-lg-2 col-md-2 col-sm-6 col-12">
                     <button mat-raised-button class="mr-10" type="submit" color="primary" >Generate</button>
                 </div>
@@ -73,24 +65,19 @@
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="orderType">
-            <th mat-header-cell *matHeaderCellDef class="ew-200"> Order Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.order_type.typeName}} </td>
-        </ng-container>
-
         <ng-container matColumnDef="orderAmount">
             <th mat-header-cell *matHeaderCellDef> Order Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderAmount}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.orderAmount | currency:'':''}} </td>
         </ng-container>
 
         <ng-container matColumnDef="orderStatus">
             <th mat-header-cell *matHeaderCellDef class="ew-200"> Order Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.orderStatus}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.orderStatus | titlecase}} </td>
         </ng-container>
 
         <ng-container matColumnDef="created_at">
-            <th mat-header-cell *matHeaderCellDef class="ew-100"> Ordered At </th>
-            <td mat-cell *matCellDef="let element"> {{element.created_at | datex:'DD-MM-YYYY'}} </td>
+            <th mat-header-cell *matHeaderCellDef class="ew-180"> Ordered At </th>
+            <td mat-cell *matCellDef="let element"> {{element.created_at | datex:'DD-MM-YYYY hh:mm a'}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
