--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,39 +7,20 @@
 
 @import 'mix-scss/scss/lib.scss';
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
 $frontExpoSmart-primary: mat-palette($md-frontexpo-blue);
 $frontExpoSmart-accent: mat-palette($md-frontexpo-orange, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
 $frontExpoSmart-warn: mat-palette($md-frontexpo-red);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $frontExpoSmart-theme: mat-light-theme((
   color: (
     primary: $frontExpoSmart-primary,
     accent: $frontExpoSmart-accent,
     warn: $frontExpoSmart-warn,
+    success: $frontExpoSmart-warn,
   )
 ));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include angular-material-theme($frontExpoSmart-theme);
 
-// @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-// $color-primary: #2e358e;
-// $color-accent: #faae1a;
-// $color-warning:#bd2227;
 html, body { 
     height: 100%; 
     font-size: 10px;
@@ -431,4 +412,9 @@ table {
         }
     }
 
+}
+
+.mat-success {
+    background-color: $color-success;
+    color: #fff;
 }
