--- a/src/app/admin/table-manager/table-manager.component.scss
+++ b/src/app/admin/table-manager/table-manager.component.scss
@@ -23,9 +23,9 @@
             font-weight: 600;
             color: #fff;
             background-color: $color-success;
-            width: calc(100% - 36px);
+            width: 100%;
             height: calc(100% - 36px);
-            left: 18px;
+            left: 0px;
             top: 18px;
             border-radius: 5px;
             cursor: pointer;
