--- a/src/app/admin/settings/branches-setting/branches-setting.component.html
+++ b/src/app/admin/settings/branches-setting/branches-setting.component.html
@@ -1,7 +1,7 @@
 <div class="page_header d-flex mb-4">
     <h2 class="header_title">Branch</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary" (click)="updateBranch()">Add New</button>
+        <button mat-raised-button color="primary" routerLink="/admin/settings/branches/update">Add New</button>
     </div>
 </div>
 <div class="table_outerWrapper mat-elevation-z2 mt-20">
@@ -13,8 +13,8 @@
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                    <mat-menu #moreOption="matMenu">
-                    <button mat-menu-item type="button" (click)="updateBranch(element)"><mat-icon>create</mat-icon> Edit</button>
+                <mat-menu #moreOption="matMenu">
+                    <button mat-menu-item type="button" [routerLink]="['/admin/settings/branches/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
                     <button mat-menu-item type="button" (click)="deleteBranch(element)"><mat-icon>delete</mat-icon>Delete</button>
                 </mat-menu>
             </td>
@@ -52,46 +52,3 @@
     </table>
     <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
 </div>
-
-
-<div class="right_sidePannel transition" [class.active]="sidemenu">
-    <div class="right_headerBox">
-        <h4 *ngIf="!this.form.get('id').value">Add New</h4>
-        <h4 *ngIf="this.form.get('id').value">Update Category</h4>
-    </div>
-    <div class="right_bodyWrapper">
-        <form [formGroup]="form" (submit)="saveBranch($event)">
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Branch Code</mat-label>
-                <input type="text" formControlName="branchCode" matInput>
-            </mat-form-field>
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Branch Title</mat-label>
-                <input type="text" formControlName="branchTitle" matInput>
-            </mat-form-field>
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Discription</mat-label>
-                <input type="text" formControlName="description" matInput>
-            </mat-form-field>
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Branch Address</mat-label>
-                <input type="text" formControlName="branchAddress" matInput>
-            </mat-form-field>
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Description</mat-label>
-                <input type="text" formControlName="description" matInput>
-            </mat-form-field>
-
-            <div class="d-flex align-items-center mb-20 mt-10">
-                <p class="my-0 mr-20">Is Active?</p>
-                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
-            </div>
-    
-            <div class="d-flex justify-content-between">
-                <button mat-raised-button color="primary" type="submit">{{ (this.form.get('id').value)?'Update':'Add'}}</button>
-                <button mat-raised-button color="warn" type="button" (click)="cancelUpdate()">Cancel</button>
-            </div>
-        </form>
-    </div>
-</div>
-<div class="backdrop" [class.active]="sidemenu" (click)="cancelUpdate()"></div>
