--- a/src/styles.scss
+++ b/src/styles.scss
@@ -414,6 +414,29 @@ table {
 
 }
 
+.product_imrBox{
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    & input{
+        visibility: hidden;
+        position: absolute;
+    }
+    & label{
+        width: 172px;
+        height: 172px;
+        margin-bottom: 0px;
+        background-size: 100%;
+        display: block;
+        background-image: url('/assets/images/food.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 4px;
+        border: 1px solid #b9b9b9;
+        cursor: pointer;
+    }
+}
+
 .mat-success {
     background-color: $color-success;
     color: #fff;
