--- a/src/theme-palette.scss
+++ b/src/theme-palette.scss
@@ -1,24 +1,58 @@
 
+// $md-frontexpo-blue: (
+//     50 : #e8eaf6,
+//     100 : #c5cbe9,
+//     200 : #9fa8da,
+//     300 : #7985cb,
+//     400 : #5c6bc0,
+//     500 : #3f51b5,
+//     600 : #394aae,
+//     700 : #3140a5,
+//     800 : #29379d,
+//     900 : #1b278d,
+//     A100 : #c6cbff,
+//     A200 : #939dff,
+//     A400 : #606eff,
+//     A700 : #4757ff,
+//     contrast: (
+//         50 : #000000,
+//         100 : #000000,
+//         200 : #000000,
+//         300 : #000000,
+//         400 : #ffffff,
+//         500 : #ffffff,
+//         600 : #ffffff,
+//         700 : #ffffff,
+//         800 : #ffffff,
+//         900 : #ffffff,
+//         A100 : #000000,
+//         A200 : #000000,
+//         A400 : #ffffff,
+//         A700 : #ffffff,
+//     )
+// );
+
+
 $md-frontexpo-blue: (
-    50 : #e8eaf6,
-    100 : #c5cbe9,
-    200 : #9fa8da,
-    300 : #7985cb,
-    400 : #5c6bc0,
-    500 : #3f51b5,
-    600 : #394aae,
-    700 : #3140a5,
-    800 : #29379d,
-    900 : #1b278d,
-    A100 : #c6cbff,
-    A200 : #939dff,
-    A400 : #606eff,
-    A700 : #4757ff,
+    50 : #e6e7f1,
+    100 : #c0c2dd,
+    200 : #979ac7,
+    300 : #6d72b0,
+    400 : #4d539f,
+    500 : #2e358e,
+    600 : #293086,
+    700 : #23287b,
+    800 : #1d2271,
+    900 : #12165f,
+    A100 : #969bff,
+    A200 : #636aff,
+    A400 : #3039ff,
+    A700 : #1721ff,
     contrast: (
         50 : #000000,
         100 : #000000,
         200 : #000000,
-        300 : #000000,
+        300 : #ffffff,
         400 : #ffffff,
         500 : #ffffff,
         600 : #ffffff,
@@ -26,7 +60,7 @@ $md-frontexpo-blue: (
         800 : #ffffff,
         900 : #ffffff,
         A100 : #000000,
-        A200 : #000000,
+        A200 : #ffffff,
         A400 : #ffffff,
         A700 : #ffffff,
     )
