--- a/src/app/admin/orders/components/new-order/new-order.component.scss
+++ b/src/app/admin/orders/components/new-order/new-order.component.scss
@@ -257,19 +257,24 @@
 
 
 .order_layout {
-    height: calc(100vh - 160px);
+    height: calc(100vh - 220px);
     border-radius: 5px;
     overflow: hidden;
     background-color: rgba($color-primary, 0.1);
     background-color: #fff;
     display: grid;
     grid-template-columns: 1fr 300px;
-    grid-auto-rows: minmax(min-content, max-content) auto;
+    grid-auto-rows:110px auto;
 
     
     grid-template-areas: 
             "customer billing"
             "order billing";
+
+    
+    @media (max-width: 1325px) {
+        grid-auto-rows:170px auto;
+    }
 
     @media (max-width: 1200px) {
         height: auto;
