--- a/src/app/admin/orders/components/table-selection/table-selection.component.scss
+++ b/src/app/admin/orders/components/table-selection/table-selection.component.scss
@@ -86,13 +86,13 @@
             & .table_circle {
                 background-color: $color-accent;
             }
-            & .table_innerBox {
-                & .table_seat_checkBox {
-                    & label {
-                        background-color: $color-accent;
-                    }
-                }
-            }
+            // & .table_innerBox {
+            //     & .table_seat_checkBox {
+            //         & label {
+            //             background-color: $color-accent;
+            //         }
+            //     }
+            // }
         }
     }
 }
