--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -75,19 +75,22 @@
             </div>
         </div>
 
-        <div class="row align-items-center flex-wrap mb-15">
-            <div class="col-12">
-                <div class="d-flex align-items-center my-10">
-                    <p class="my-0 mr-20">Veg Only</p>
-                    <mat-slide-toggle formControlName="isVeg"></mat-slide-toggle>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="d-flex align-items-center my-10">
-                    <p class="my-0 mr-20">Is Active?</p>
-                    <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
-                </div>
-            </div>
+        <div>
+            <mat-form-field appearance="outline">
+                <mat-label>Kitchen</mat-label>
+                <mat-select matNativeControl formControlName="kitchen_id">
+                    <mat-option *ngFor="let item of kitchenList;" [value]="item.id">{{ item.kitchenTitle }}</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="d-flex align-items-center my-10">
+            <mat-slide-toggle formControlName="isActive" color="primary">Active</mat-slide-toggle>
+        </div>
+        <div class="d-flex align-items-center my-10">
+            <mat-slide-toggle formControlName="isVeg" color="primary">Veg Only</mat-slide-toggle>
+        </div>
+        <div class="d-flex align-items-center my-10">
+            <mat-slide-toggle formControlName="isOutOfStock" color="primary">Out Of Stock</mat-slide-toggle>
         </div>
         
         <div class="button_wrapper">
