--- a/src/app/kitchen/kitchen.component.html
+++ b/src/app/kitchen/kitchen.component.html
@@ -1,4 +1,13 @@
-<div class="container-fluid  pa-20">
+<app-kitchen-header></app-kitchen-header>
+<mat-sidenav-container (backdropClick)="_layout.isOpened=false" [class.menu-close]="!_layout.isOpened && _layout.menuMode == 'side'">
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
+<!-- <div class="container-fluid  pa-20">
+
+    
     <div class="row">
         <div class="col-12 col-xl-6">
             <div class="row">
@@ -33,4 +42,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
